; ModuleID = '/home/carl/AnghaBench/git/extr_unix-socket.c_chdir_len.c'
source_filename = "/home/carl/AnghaBench/git/extr_unix-socket.c_chdir_len.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*, i32)* @chdir_len to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @chdir_len(i8* %0, i32 %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i8*, align 8
  %6 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load i8*, i8** %3, align 8
  %8 = load i32, i32* %4, align 4
  %9 = call i8* @xmemdupz(i8* %7, i32 %8)
  store i8* %9, i8** %5, align 8
  %10 = load i8*, i8** %5, align 8
  %11 = call i32 @chdir(i8* %10)
  store i32 %11, i32* %6, align 4
  %12 = load i8*, i8** %5, align 8
  %13 = call i32 @free(i8* %12)
  %14 = load i32, i32* %6, align 4
  ret i32 %14
}

declare dso_local i8* @xmemdupz(i8*, i32) #1

declare dso_local i32 @chdir(i8*) #1

declare dso_local i32 @free(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
